--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="css/3-col-portfolio.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   </head>
 
@@ -54,7 +54,7 @@
 
         <p class="text-white lead">My mission is with my code to make other humans life easier.</p>
         <p class="lead">
-          <a class="btn btn-warning btn-lg button-cv" href="#" role="button">Download my CV</a>
+          <button type="button" class="btn btn-warning btn-lg button-cv" id="button-scroll" href="#" role="button">Download my CV</button>
         </p>
       </div>
     </div>
@@ -113,7 +113,7 @@
       </div>
     </div>
       <!-- Page Heading -->
-      <div class="container">
+      <div class="container" id="portfolio-work">
       <h1 class="my-4 text-center">Work 
       </h1>
 
@@ -274,6 +274,7 @@
       <!-- /.container -->
     </footer>
 
+    <script src="vendor/js/js.js"></script>    
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
