--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
   <!-- HEADER -->
     <div class="container-fluid">
       <div class="jumbotron">
-        <h1 class="display-4 text-white">Hi, I'm Erind.</h1>
-        <p class="lead text-white">I'm a Graphic Designer & Junior Web Developer!</p>
-        <hr class="my-4">
+        <div class="text-container">
+        <h1 class="display-4 text-white">Erind Hoxha</h1>
+        <p class="lead text-white">Junior Front End Developer / UI/UX Designer / Graphic Designer</p>
 
-        <p class="text-white lead">My mission is with my code to make other humans life easier.</p>
         <p class="lead">
           <button type="button" class="btn btn-warning btn-lg button-cv" id="button-scroll" href="#" role="button">Download my CV</button>
         </p>
+      </div>
       </div>
     </div>
     <!-- HEADER -->
