--- a/index.html
+++ b/index.html
@@ -20,34 +20,41 @@
 
   <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Welcome</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Portfolio
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="cv.html">CV
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+
 
     <!-- NAVIGATION -->
 
   <!-- HEADER -->
     <div class="container-fluid">
       <div class="jumbotron">
+
+
+            <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Welcome</a>
+          <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon custom-toggler"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Portfolio
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="cv.html">CV
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      
+
+
         <div class="text-container">
         <h1 class="display-4 text-white">Erind Hoxha</h1>
         <p class="lead text-white">Junior Front End Developer / UI/UX Designer / Graphic Designer</p>
