Changed nav bars

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p class="lead text-white">Junior Front End Developer / UI/UX Designer / Graphic Designer</p>
 
         <p class="lead">
-          <button type="button" class="btn btn-warning btn-lg button-cv" id="button-scroll" href="#" role="button">Download my CV</button>
+          <button type="button" class="btn btn-dark btn-lg button-cv" id="button-scroll" href="#" role="button">See my work</button>
         </p>
       </div>
       </div>
