--- a/CV.html
+++ b/CV.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>Erind Hoxha - Get Work Done</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
