Tried to add transitions, returned back to normal

--- a/ChesterTourist Simple Grid/index.html
+++ b/ChesterTourist Simple Grid/index.html
@@ -29,7 +29,7 @@
                         <a href="#contact">Facts</a>
                         <a href="#contact">Contact Us</a>
                         <a href="javascript:void(0);" style="font-size:20px;" class="icon" onclick="myFunction()">&#9776;</a>
-                        <img src="images/CTlogo.png" style="height:100px; float:right;">
+                        <img id="logo" src="images/CTlogo.png" style="height:100px; float:right;">
                     </div>
                   </div>
                 </div>
