--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    
+    <link href="https://fonts.googleapis.com/css?family=IM+Fell+English|Playfair+Display:900" rel="stylesheet">
     <title>Erind Hoxha - Get Work Done</title>
 
     <!-- Bootstrap core CSS -->
@@ -16,10 +17,14 @@
     <link href="css/3-col-portfolio.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+
+
+		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
+
+
   </head>
 
   <body>
-
 
 
     <!-- NAVIGATION -->
@@ -33,6 +38,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top navbar-fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Welcome</a>
+
+
           <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon custom-toggler"></span>
           </button>
@@ -43,16 +50,15 @@
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="cv.html">CV
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
       </nav>
 
-      
 
 
         <div class="text-container">
@@ -280,12 +286,10 @@
       </div>
       <!-- /.container -->
     </footer>
-
     <script src="vendor/js/js.js"></script>    
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
   </body>
 
 </html>
