Animation college adding stuff

--- a/subway.html
+++ b/subway.html
@@ -108,6 +108,13 @@
     </div>
       <!-- Page Heading -->
       <div class="container justify-content-center"> 
+          <blockquote class="blockquote text-center">
+              <p class="mb-0">Hi Erind. Do you have an existing subcard? If so, what's the 16 digit barcode number from the back?
+                  If you don't, please let us know your address. We love the vid 😀</p>
+              <footer class="blockquote-footer">Subway NZ <cite title="Source Title">- www.facebook.com/subwaynz/</cite></footer>
+            </blockquote>
+
+             
           <div class="row col-lg-9 mb-5" style="margin:0 auto">
               <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" src="subway/vid/SubwayAdvertisement.mp4" allowfullscreen></iframe>
