Animation college finished

--- a/animationcollege.html
+++ b/animationcollege.html
@@ -169,7 +169,7 @@
           <!-- CARD YOOBEE COLLEGE -->
         <div class="col-lg-4 col-sm-6 portfolio-item ">
           <div class="card h-100">
-            <a href="yoobee.html"><img class="card-img-top hvr-float " src="Animationcollege/assignment-3-card-image.png" alt=""></a>
+            <a href="assignment3.html"><img class="card-img-top hvr-float " src="Animationcollege/assignment-3-card-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="assignment3.html">Assignment 3</a>
@@ -202,7 +202,7 @@
           <!-- CARD NEW WORLD -->
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top hvr-float " src="Animationcollege/assignment-5-card-image.png" alt=""></a>
+            <a href="assignment5.html"><img class="card-img-top hvr-float " src="Animationcollege/assignment-5-card-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Assignment 5</a>
