--- a/assignment2.html
+++ b/assignment2.html
@@ -115,68 +115,70 @@
         <div class="row">
 
 
-    <div class="col-lg-4 col-md-3 col-sm-4 col-4">
+    <div class="col-lg-4 col-md-4 col-sm-6 col-6">
             <a href="Animationcollege/Assignment2/Presskit_1.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
                 <img src="Animationcollege/Assignment2/Presskit_1.png" class="img-fluid hvr-float mt-4">
             </a>
             </div>
 
-            <div class="col-lg-4 col-md-3 col-sm-4 col-4">
+            <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                     <a href="Animationcollege/Assignment2/Presskit_2.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
                         <img src="Animationcollege/Assignment2/Presskit_2.png" class="img-fluid hvr-float mt-4">
                     </a>
                     </div>
 
-                    <div class="col-lg-4 col-md-3 col-sm-4 col-4">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-6">
                             <a href="Animationcollege/Assignment2/businesscard1.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
                                 <img src="Animationcollege/Assignment2/businesscard1.png" class="img-fluid hvr-float mt-4">
                             </a>
                             </div>
         
 
-        <div class="col-lg-4 col-md-3 col-sm-4 col-4">
-            <a href="Animationcollege/Assignment1/image1-sunset.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                <img src="Animationcollege/Assignment1/image1-sunset.png" class="img-fluid hvr-float mt-4">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-6">
+            <a href="Animationcollege/Assignment2/businesscard2.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                <img src="Animationcollege/Assignment2/businesscard2.png" class="img-fluid hvr-float mt-4">
             </a>
             </div>
 
-    <div class="col-lg-4 col-md-3 col-sm-4 col-4">
-            <a href="Animationcollege/Assignment1/image2-sunset.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                <img src="Animationcollege/Assignment1/image2-sunset.png" class="img-fluid hvr-float mt-4">
+    <div class="col-lg-4 col-md-3 col-sm-6 col-6">
+            <a href="Animationcollege/Assignment2/Envelope.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                <img src="Animationcollege/Assignment2/Envelope.png" class="img-fluid hvr-float mt-4">
             </a>
             </div>
 
-<div class="col-lg-4 col-md-3 col-sm-4 col-4">
-        <a href="Animationcollege/assignment-1-card-image.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-            <img src="Animationcollege/assignment-1-card-image.png" class="img-fluid hvr-float mt-4">
+<div class="col-lg-4 col-md-3 col-sm-6 col-6">
+        <a href="Animationcollege/Assignment2/Facebook_banner.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+            <img src="Animationcollege/Assignment2/Facebook_banner.png" class="img-fluid hvr-float mt-4">
         </a>
         </div>
 
-        <div class="col-lg-4 col-md-3 col-sm-4 col-4">
-                <a href="Animationcollege/Assignment1/image1.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                    <img src="Animationcollege/Assignment1/image1.png" class="img-fluid hvr-float mt-4">
+        <div class="col-lg-4 col-md-3 col-sm-6 col-6">
+                <a href="Animationcollege/Assignment2/Facebook_mockup.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                    <img src="Animationcollege/Assignment2/Facebook_mockup.png" class="img-fluid hvr-float mt-4">
                 </a>
                 </div>
 
-    <div class="col-lg-4 col-md-3 col-sm-4 col-4">
-            <a href="Animationcollege/Assignment1/image2.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                <img src="Animationcollege/Assignment1/image2.png" class="img-fluid hvr-float mt-4">
-            </a>
-            </div>
+
+     
 
             <div class="col-lg-4 col-md-3 col-sm-4 col-4">
-                    <a href="Animationcollege/Assignment1/image3.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                        <img src="Animationcollege/Assignment1/image3.png" class="img-fluid hvr-float mt-4">
+                    <a href="Animationcollege/Assignment2/Leaflet_back.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                        <img src="Animationcollege/Assignment2/Leaflet_back.png" class="img-fluid hvr-float mt-4 mb-4">
                     </a>
                     </div>
-            <!-- 1 -->
 
-            <div class="col-lg-4 col-md-3 col-sm-4 col-4">
-                    <a href="Animationcollege/Assignment1/hardshellgif.gif" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                        <img src="Animationcollege/Assignment1/hardshellgif.gif" class="img-fluid hvr-float mt-4 mb-4">
-                    </a>
-                    </div>
-            <!-- 1 -->
+                    <div class="col-lg-4 col-md-3 col-sm-4 col-4">
+                        <a href="Animationcollege/Assignment2/Leaflet_front.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                            <img src="Animationcollege/Assignment2/Leaflet_front.png" class="img-fluid hvr-float mt-4 mb-4">
+                        </a>
+                        </div>
+
+                        <div class="col-lg-4 col-md-3 col-sm-6 col-6 mb-4">
+                            <a href="Animationcollege/Assignment2/infograph.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                                <img src="Animationcollege/Assignment2/infograph.png" class="img-fluid hvr-float mt-4">
+                            </a>
+                            </div>
+                    <!-- 1 -->
 
             </div>
     </div>
