--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 
             <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top navbar-fixed-top">
-        <div class="container-fluid">
+        <div class="container-fluid ">
           <a class="navbar-brand" href="#">Welcome</a>
-
 
           <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon custom-toggler"></span>
@@ -125,6 +124,18 @@
       <!-- Page Heading -->
       <div class="container" id="portfolio-work">
       <div class="row">
+   
+          <div class="col-lg-4 col-sm-6 portfolio-item">
+            <img style="width:100%; border-radius:50px" src="img/vidapp-card-image.png">
+            </div>
+            <div class="col-lg-4 col-sm-6 portfolio-item">
+                <img style="width:100%; border-radius:50px" src="img/vidapp-card-image.png">
+                </div>
+                <div class="col-lg-4 col-sm-6 portfolio-item">
+                    <img style="width:100%; border-radius:50px" src="img/vidapp-card-image.png">
+                    </div>
+ 
+
         <div class="col-lg-3 col-sm-6 portfolio-item">
           <!-- CARD VIDAPP -->
           <div class="card h-100">
