Removed background, added new feature with jQuery

--- a/index.html
+++ b/index.html
@@ -29,23 +29,41 @@
     <!-- HEADER -->
     <div class="container-fluid">
       <div class="jumbotron">
-
-
             <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top navbar-fixed-top">
         <div class="container-fluid ">
-          <a class="navbar-brand" href="#">Welcome</a>
+          <a class="navbar-brand" href="#"><img id="imagelogo" src="img/ehox.png"></a>
 
           <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon custom-toggler"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Portfolio
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="#"><i class="fab fa-github"></i>
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
+              <li class="nav-item">
+                  <a class="nav-link text-dark" href="#"><i class="fab fa-instagram"></i>
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="#"><i class="fab fa-facebook"></i>
+                      <span class="sr-only">(current)</span>
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link text-dark" href="#"><i class="fab fa-twitter"></i>
+                        <span class="sr-only">(current)</span>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="#"><i class="fab fa-youtube"></i>
+                          <span class="sr-only">(current)</span>
+                        </a>
+                      </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="cv.html">CV
                 </a>
@@ -58,15 +76,17 @@
 
 
         <div class="text-container">
-        <h1 class="display-4 text-white">Erind Hoxha</h1>
-        <p class="lead text-white">Junior Front End Developer / UI/UX Designer / Graphic Designer</p>
-
-        <p class="lead">
-          <button type="button" class="btn btn-dark btn-lg button-cv" id="button-scroll" href="#" role="button">See my work</button>
+          <img src="img/erind.png" style="width:200px" class="mb-5">
+        <h1 class="display-4 text-black">Designer, Developer.</h1>
+        <p class="lead text-black">I code, design beautiful and simple things.</p>
+          <button type="button" class="btn btn-dark btn-lg button-cv" id="button-scroll" href="#" role="button">See more</button>
         </p>
       </div>
+
+  
       </div>
     </div>
+
     <!-- HEADER -->
   
     <!-- Page Content -->
@@ -118,28 +138,35 @@
     <img style="width:100%;" class="img-skills" src="img/aftereffects-logo.png">
 </div>
 <!-- PAGE CONTENT -->
+</div>
+</div>
 
-      </div>
-    </div>
+<div style="height:100%; background:url("https://images.pexels.com/photos/1145720/pexels-photo-1145720.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")" class="container-fluid text-center mt-5 bg-dark text-white p-5">
+    <h1 class="pt-5">Hi I'm Erind, nice to meet you.</h1>
+   <p class="col-sm-9 col-lg-6 col-12 pb-5" style="width:100%; margin:0 auto;">Since beginning my journey as a freelance designer nearly 3 years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually improving my chops</p>
+  <button type="button" class="btn btn-lg bg-light text-dark">Download my CV</button>
+
+
+
+   </div>
+</div>
       <!-- Page Heading -->
-      <div class="container" id="portfolio-work">
-      <div class="row">
-   
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <img style="width:100%; border-radius:50px" src="img/vidapp-card-image.png">
-            </div>
-            <div class="col-lg-4 col-sm-6 portfolio-item">
-                <img style="width:100%; border-radius:50px" src="img/vidapp-card-image.png">
-                </div>
-                <div class="col-lg-4 col-sm-6 portfolio-item">
-                    <img style="width:100%; border-radius:50px" src="img/vidapp-card-image.png">
-                    </div>
- 
+      <div class="container text-center mt-5" id="portfolio-work">
 
-        <div class="col-lg-3 col-sm-6 portfolio-item">
+          <div class="btn-group mb-5 mt-5" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-lg btn-default bg-light text-dark mobile-button">Mobile</button>
+              <button type="button" class="btn btn-lg btn-default bg-light text-dark web-button">Web Development</button>
+              <button type="button" class="btn btn-lg btn-default bg-light text-dark design-button">Design</button>
+              <button type="button" class="btn btn-lg btn-default bg-light text-dark all-button">All</button>
+            </div>
+            
+      <div class="row">
+
+
+        <div class="col-lg-3 col-sm-6 portfolio-item mobile">
           <!-- CARD VIDAPP -->
           <div class="card h-100">
-            <a href="vidapp.html"><img class="card-img-top hvr-float " src="img/vidapp-card-image.png" alt=""></a>
+            <a href="vidapp.html"><img class="card-img-top hvr-float" src="img/vidapp-card-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="vidapp.html" class="text-dark">Vidapp Projects</a>
@@ -152,10 +179,10 @@
           <!-- CARD VIDAPP -->
         </div>
         <!-- END COL -->
-        <div class="col-lg-3 col-sm-6 portfolio-item">
+        <div class="col-lg-3 col-sm-6 portfolio-item design">
           <!-- CARD ANIMATION COLLEGE -->
           <div class="card h-100">
-            <a href="animationcollege.html"><img class="card-img-top hvr-float " src="img/animation-college-icon.png" alt=""></a>
+            <a href="animationcollege.html"><img class="card-img-top hvr-float" src="img/animation-college-icon.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="animationcollege.html">Animation College Projects</a>
@@ -170,9 +197,9 @@
 
 
           <!-- CARD YOOBEE COLLEGE -->
-        <div class="col-lg-3 col-sm-6 portfolio-item ">
+        <div class="col-lg-3 col-sm-6 portfolio-item web">
           <div class="card h-100">
-            <a href="yoobee.html"><img class="card-img-top hvr-float " src="img/yoobee-school-image.png" alt=""></a>
+            <a href="yoobee.html"><img class="card-img-top hvr-float" src="img/yoobee-school-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="yoobee.html">Yoobee Design School Projects</a>
@@ -184,9 +211,9 @@
           <!-- CARD YOOBEE COLLEGE -->
 
           <!-- CARD FREECODECAMP -->
-        <div class="col-lg-3 col-sm-6 portfolio-item">
+        <div class="col-lg-3 col-sm-6 portfolio-item web">
           <div class="card h-100">
-            <a href="freecodecamp.html"><img class="card-img-top hvr-float " src="img/freecodecamp-logo.png" alt=""></a>
+            <a href="freecodecamp.html"><img class="card-img-top hvr-float" src="img/freecodecamp-logo.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="freecodecamp.html">freeCodeCamp Projects</a>
@@ -199,9 +226,9 @@
 
 
           <!-- CARD NEW WORLD -->
-        <div class="col-lg-3 col-sm-6 portfolio-item">
+        <div class="col-lg-3 col-sm-6 portfolio-item design">
           <div class="card h-100">
-            <a href="newworld.html"><img class="card-img-top hvr-float " src="img/new-world-logo.png" alt=""></a>
+            <a href="newworld.html"><img class="card-img-top hvr-float" src="img/new-world-logo.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="newworld.html">New World Project</a>
@@ -213,9 +240,9 @@
           <!-- CARD NEW WORLD -->
 
                   <!-- CARD DOTA QUIZ -->
-        <div class="col-lg-3 col-sm-6 portfolio-item">
+        <div class="col-lg-3 col-sm-6 portfolio-item design">
             <div class="card h-100">
-              <a href="dotaquiz.html"><img class="card-img-top hvr-float " src="quiz/quiz-card-image.png" alt=""></a>
+              <a href="dotaquiz.html"><img class="card-img-top hvr-float" src="quiz/quiz-card-image.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="dotaquiz.html">Dota Quiz</a>
@@ -227,9 +254,9 @@
             <!-- CARD DOTA QUIZ --> 
 
                            <!-- CARD DOTA QUIZ -->
-        <div class="col-lg-3 col-sm-6 portfolio-item">
+        <div class="col-lg-3 col-sm-6 portfolio-item design">
             <div class="card h-100">
-              <a href="subway.html"><img class="card-img-top hvr-float " src="img/subway-card-image.png" alt=""></a>
+              <a href="subway.html"><img class="card-img-top hvr-float" src="img/subway-card-image.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="subway.html">Subway Project</a>
