Finalised the banner

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+English|Playfair+Display:900" rel="stylesheet">
-    <title>Erind Hoxha - Get Work Done</title>
+    <title>Erind Hoxha - Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -76,10 +76,12 @@
 
 
         <div class="text-container">
+            <h1 class="display-4 text-black">Designer, Junior Front-end Developer.</h1>
+            <p class="lead text-black mb-5">I code, design beautiful and simple things, and I enjoy what I do</p>
           <img src="img/erind.png" style="width:200px" class="mb-5">
-        <h1 class="display-4 text-black">Designer, Developer.</h1>
-        <p class="lead text-black">I code, design beautiful and simple things.</p>
+          <div class="row justify-content-center">
           <button type="button" class="btn btn-dark btn-lg button-cv" id="button-scroll" href="#" role="button">See more</button>
+        </div>
         </p>
       </div>
 
@@ -140,12 +142,12 @@
 <!-- PAGE CONTENT -->
 </div>
 </div>
-
-<div style="height:100%; background:url("https://images.pexels.com/photos/1145720/pexels-photo-1145720.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")" class="container-fluid text-center mt-5 bg-dark text-white p-5">
+<div id="overlay">
+<div id="div-greeting" style="height:100%;" class="container-fluid text-center mt-5 bg-dark text-white p-5">
     <h1 class="pt-5">Hi I'm Erind, nice to meet you.</h1>
    <p class="col-sm-9 col-lg-6 col-12 pb-5" style="width:100%; margin:0 auto;">Since beginning my journey as a freelance designer nearly 3 years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually improving my chops</p>
   <button type="button" class="btn btn-lg bg-light text-dark">Download my CV</button>
-
+</div>
 
 
    </div>
