--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#"><i class="fab fa-github"></i>
+                <a class="nav-link text-dark hvr-icon-drop" href="https://github.com/erindhoxha" target="_blank"><i class="hvr-icon fab fa-github"></i>
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link text-dark" href="#"><i class="fab fa-instagram"></i>
+                  <a class="nav-link text-dark hvr-icon-drop" href="#"><i class="hvr-icon fab fa-instagram"></i>
                     <span class="sr-only">(current)</span>
                   </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="#"><i class="fab fa-facebook"></i>
+                    <a class="nav-link text-dark hvr-icon-drop" href="#"><i class="hvr-icon fab fa-facebook"></i>
                       <span class="sr-only">(current)</span>
                     </a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link text-dark" href="#"><i class="fab fa-twitter"></i>
+                      <a class="nav-link text-dark hvr-icon-drop" href="#"><i class="hvr-icon fab fa-twitter"></i>
                         <span class="sr-only">(current)</span>
                       </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#"><i class="fab fa-youtube"></i>
+                        <a class="nav-link text-dark hvr-icon-drop" href="#"><i class="hvr-icon fab fa-youtube"></i>
                           <span class="sr-only">(current)</span>
                         </a>
                       </li>
@@ -76,9 +76,9 @@
 
 
         <div class="text-container">
+          <img src="img/erind.png" style="width:130px" class="mb-3">
             <h1 class="display-4 text-black">Designer, Junior Front-end Developer.</h1>
             <p class="lead text-black mb-5">I code, design beautiful and simple things, and I enjoy what I do</p>
-          <img src="img/erind.png" style="width:200px" class="mb-5">
           <div class="row justify-content-center">
           <button type="button" class="btn btn-dark btn-lg button-cv" id="button-scroll" href="#" role="button">See more</button>
         </div>
@@ -146,7 +146,7 @@
 <div id="div-greeting" style="height:100%;" class="container-fluid text-center mt-5 bg-dark text-white p-5">
     <h1 class="pt-5">Hi I'm Erind, nice to meet you.</h1>
    <p class="col-sm-9 col-lg-6 col-12 pb-5" style="width:100%; margin:0 auto;">Since beginning my journey as a freelance designer nearly 3 years ago, I've done remote work for agencies, consulted for startups, and collaborated with talented people to create digital products for both business and consumer use. I'm quietly confident, naturally curious, and perpetually improving my chops</p>
-  <button type="button" class="btn btn-lg bg-light text-dark">Download my CV</button>
+  <button type="button" class="btn btn-lg bg-danger text-white button-cv">Download my CV</button>
 </div>
 
 
@@ -165,7 +165,7 @@
       <div class="row">
 
 
-        <div class="col-lg-3 col-sm-6 portfolio-item mobile">
+        <div class="col-lg-4 col-sm-6 portfolio-item mobile">
           <!-- CARD VIDAPP -->
           <div class="card h-100">
             <a href="vidapp.html"><img class="card-img-top hvr-float" src="img/vidapp-card-image.png" alt=""></a>
@@ -181,7 +181,7 @@
           <!-- CARD VIDAPP -->
         </div>
         <!-- END COL -->
-        <div class="col-lg-3 col-sm-6 portfolio-item design">
+        <div class="col-lg-4 col-sm-6 portfolio-item design">
           <!-- CARD ANIMATION COLLEGE -->
           <div class="card h-100">
             <a href="animationcollege.html"><img class="card-img-top hvr-float" src="img/animation-college-icon.png" alt=""></a>
@@ -199,7 +199,7 @@
 
 
           <!-- CARD YOOBEE COLLEGE -->
-        <div class="col-lg-3 col-sm-6 portfolio-item web">
+        <div class="col-lg-4 col-sm-6 portfolio-item web">
           <div class="card h-100">
             <a href="yoobee.html"><img class="card-img-top hvr-float" src="img/yoobee-school-image.png" alt=""></a>
             <div class="card-body">
@@ -213,7 +213,7 @@
           <!-- CARD YOOBEE COLLEGE -->
 
           <!-- CARD FREECODECAMP -->
-        <div class="col-lg-3 col-sm-6 portfolio-item web">
+        <div class="col-lg-4 col-sm-6 portfolio-item web">
           <div class="card h-100">
             <a href="freecodecamp.html"><img class="card-img-top hvr-float" src="img/freecodecamp-logo.png" alt=""></a>
             <div class="card-body">
@@ -228,7 +228,7 @@
 
 
           <!-- CARD NEW WORLD -->
-        <div class="col-lg-3 col-sm-6 portfolio-item design">
+        <div class="col-lg-4 col-sm-6 portfolio-item design">
           <div class="card h-100">
             <a href="newworld.html"><img class="card-img-top hvr-float" src="img/new-world-logo.png" alt=""></a>
             <div class="card-body">
@@ -242,7 +242,7 @@
           <!-- CARD NEW WORLD -->
 
                   <!-- CARD DOTA QUIZ -->
-        <div class="col-lg-3 col-sm-6 portfolio-item design">
+        <div class="col-lg-4 col-sm-6 portfolio-item design">
             <div class="card h-100">
               <a href="dotaquiz.html"><img class="card-img-top hvr-float" src="quiz/quiz-card-image.png" alt=""></a>
               <div class="card-body">
@@ -256,7 +256,7 @@
             <!-- CARD DOTA QUIZ --> 
 
                            <!-- CARD DOTA QUIZ -->
-        <div class="col-lg-3 col-sm-6 portfolio-item design">
+        <div class="col-lg-4 col-sm-6 portfolio-item design">
             <div class="card h-100">
               <a href="subway.html"><img class="card-img-top hvr-float" src="img/subway-card-image.png" alt=""></a>
               <div class="card-body">
@@ -304,19 +304,39 @@
       </ul> -->
 
     </div>
+
+
+
   </div>
+
+  <div id="testimonials" class="container mt-5 mb-5 justify-content-center text-center">
+      <h1 id="testimonials-header">Testimonials</h1>
+      <p id="testimonials-paragraph">People I've worked with have some good words.</p>
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+
+      <blockquote class="blockquote text-center">
+          <img src="img/erind.png" style="width:130px" class="mb-3 mt-5">
+          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus odit facilis ad non nisi eos repudiandae corporis ab consequatur repellendus modi exercitationem tempore, quam optio nobis quas et libero tempora molestias commodi culpa dolores ratione! Expedita voluptates ducimus debitis excepturi ex odio ad quae, incidunt cum, sit, voluptatem quas iure.</p>
+          <footer class="blockquote-footer">Lorem Ipsum<cite title="Source Title">- www.facebook.com/loremipsum/</cite></footer>
+        </blockquote>
+      </div>
+  </div>
+</div>
+
+<div id="contact-me" class="container">
+
+</div>
     <!-- /.container -->
 
     <!-- Footer -->
     <footer class="py-5 bg-dark text-center">
       <div class="container">
         <p class="m-0 text-center text-white">Erind Hoxha - Web & Graphic - Auckland 2018</p>
-        <a class="hvr-icon-drop" href="#"><i style="color:white;" class="hvr-icon fab fa-twitter mt-3 mr-3"></i></a>
-        <a class="hvr-icon-drop" href="#"><i style="color:white;" class="hvr-icon fab fa-facebook mt-3 mr-3"></i></a>
-        <a class="hvr-icon-drop" href="#"><i style="color:white;" class="hvr-icon fab fa-instagram mt-3 mr-3"></i></a>
-        <a class="hvr-icon-drop" href="#"><i style="color:white;" class="hvr-icon fab fa-github mt-3 mr-3"></i></a>
-
-
+        <a class="hvr-icon-drop" href="https://www.twitter.com/erindhox" target="_blank"><i style="color:white;" class="hvr-icon fab fa-twitter mt-3 mr-3"></i></a>
+        <a class="hvr-icon-drop" href="https://www.facebook.com/hoxhaerind" target="_blank"><i style="color:white;" class="hvr-icon fab fa-facebook mt-3 mr-3"></i></a>
+        <a class="hvr-icon-drop" href="https://www.instagram.com/erindhox" target="_blank"><i style="color:white;" class="hvr-icon fab fa-instagram mt-3 mr-3"></i></a>
+        <a class="hvr-icon-drop" href="https://github.com/erindhoxha" target="_blank"><i style="color:white;" class="hvr-icon fab fa-github mt-3 mr-3"></i></a>
       </div>
       <!-- /.container -->
     </footer>
