--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top navbar-fixed-top">
         <div class="container-fluid ">
           <a class="navbar-brand" href="#"><img id="imagelogo" src="img/ehox.png"></a>
+          <a class="navbar-brand" href="#"><button type="button" class="btn btn-success btn-sos">S.O.S</button></a>
 
-          <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+
+          <!-- <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon custom-toggler"></span>
-          </button>
+          </button> -->
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+              
               <li class="nav-item">
                 <a class="nav-link text-dark hvr-icon-drop" href="https://github.com/erindhoxha" target="_blank"><i class="hvr-icon fab fa-github"></i>
                   <span class="sr-only">(current)</span>
@@ -95,48 +98,48 @@
     <div class="container container-images">
      
   <div class="row"  id="skill-images">
-    <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+    <div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
       <img style="width:100%;" class="img-skills" src="img/html-logo.png">
     </div>
-    <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+    <div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
         <img style="width:100%;" class="img-skills" src="img/csslogo.png">
     </div>
 
-    <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+    <div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
       <img style="width:100%" class="img-skills" src="img/javascript-logo.png">
   </div>
 
-  <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+  <div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
     <img style="width:100%;" class="img-skills" src="img/jquery-logo.png">
 </div>
 
-    <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+    <div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
       <img style="width:100%;" class="img-skills" src="img/bootstrap-logo.png">
   </div>
 
-  <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+  <div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
     <img style="width:100%;" class="img-skills" src="img/git.png">
 </div>
 
-<div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+<div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
     <img style="width:100%;" class="img-skills" src="img/sass-logo.png">
 </div>
 
-<div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+<div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
     <img style="width:100%;" class="img-skills" src="img/photoshop-logo.png">
 </div>
 
-<div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+<div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
     <img style="width:100%;" class="img-skills" src="img/sketch-logo.png">
 </div>
 
-<div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+<div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
     <img style="width:100%;" class="img-skills" src="img/illustrator-logo.png">
 </div>
-<div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+<div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
     <img style="width:100%;" class="img-skills" src="img/premiere-pro.png">
 </div>
-<div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
+<div class="col-sm-2 col-md-2 col-lg-1 img-logo hvr-grow">
     <img style="width:100%;" class="img-skills" src="img/aftereffects-logo.png">
 </div>
 <!-- PAGE CONTENT -->
@@ -324,6 +327,68 @@
   </div>
 </div>
 
+<!-- 
+<div class="card col-md-6 mt-5 mb-5">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="100000">
+    <div class="w-100 carousel-inner" role="listbox">
+      <div class="carousel-item active">
+        <div class="carousel-caption">
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid" />
+            </div>
+            <div class="col-sm-9">
+              <h3>Gives me hope</h3>
+              <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
+                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</small>
+              <small class="smallest mute">- Yayo Dudemous</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-caption">
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid">
+            </div>
+            <div class="col-sm-9">
+              <h3>You will love it.</h3>
+              <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
+                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</small>
+              <small class="smallest mute">- Yayo Dudemous</small>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="carousel-caption">
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid">
+            </div>
+            <div class="col-sm-9">
+              <h3>Velvet pouch!</h3>
+              <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget
+                metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</small>
+              <small class="smallest mute">- Yayo Dudemous</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="float-right navi">
+      <a class="" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon ico" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon ico" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+</div> -->
 <div id="contact-me" class="container">
 
 </div>
@@ -332,6 +397,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark text-center">
       <div class="container">
+        <p class="m-0 text-center text-white pb-3"><img src="img/ehoxwhite.png"></p>
         <p class="m-0 text-center text-white">Erind Hoxha - Web & Graphic - Auckland 2018</p>
         <a class="hvr-icon-drop" href="https://www.twitter.com/erindhox" target="_blank"><i style="color:white;" class="hvr-icon fab fa-twitter mt-3 mr-3"></i></a>
         <a class="hvr-icon-drop" href="https://www.facebook.com/hoxhaerind" target="_blank"><i style="color:white;" class="hvr-icon fab fa-facebook mt-3 mr-3"></i></a>
